# keramik

./: .gitignore  1  404.html  Cargo.toml  Dockerfile  Dockerfile_operator  Dockerfile_runner  Makefile  README.md  advanced.html  advanced_bootstrap.html  advanced_configuration.html  analysis.html  book.toml  create_cluster.html  custom_runner_image.html  datadog.html  deploy_crds.html  deploy_images.html  deploy_keramik.html  developing.html  developing_operator.html  developing_runner.html  environment.html  index.html  ipfs.html  load.py  metrics.html  migration.html  mixed_networks.html  monitoring.html  operator.html  print.html  searchindex.js  searchindex.json  secrets.html  setup_network.html  simulation.html
.github/workflows/: on-demand-build-images.yaml  publish.yml  rust.yml  spec-change.yaml
analyze/: sim.ipynb
ci-scripts/: publish.sh
common/: Cargo.toml
common/src/: lib.rs  peer_info.rs  telemetry.rs
expect-patch/: Cargo.toml
expect-patch/src/: lib.rs
grafana-local/: README.md  grafana.yaml  kustomization.yaml
k8s/: kustomization.yaml
k8s/ceramic/: ceramic-init.sh  ceramic.env  create-secrets.sh  daemon-config.json  kustomization.yaml
k8s/crds/: v1alpha1.yaml
k8s/manifests/: bootstrap.yaml  ceramic.yaml
k8s/networks/: 3-x-progress-46ba4a6d-9ae2b416.yaml  small.yaml
k8s/opentelemetry/: jaeger.yaml  kustomization.yaml  opentelemetry.yaml  otel-config.yaml  pod.yaml  prom-config.yaml  prometheus.yaml
k8s/operator/: kustomization.yaml
local-scripts/: build-local.sh  build-runner-gke.sh  kind.yaml  load.py  setup.sh  small.yaml
operator/: Cargo.toml
operator/src/: crdgen.rs  labels.rs  lib.rs  main.rs  network.rs
operator/src/lgen/: controller.rs  job.rs  mod.rs  spec.rs
operator/src/monitoring/: jaeger.rs  mod.rs  opentelemetry.rs  otel-config.yaml  prom-config.yaml  prometheus.rs
operator/src/network/: bootstrap.rs  cas.rs  ceramic.rs  controller.rs  datadog.rs  ipfs.rs  ipfs_rpc.rs  mod.rs  node_affinity.rs  peers.rs  resource_limits.rs  spec.rs  storage.rs  stub.rs  utils.rs
operator/src/network/testdata/: bootstrap_job_many_peers_apply  bootstrap_job_two_peers  bootstrap_job_two_peers_delete  bootstrap_job_two_peers_get  ceramic_admin_secret  ceramic_admin_secret_source  ceramic_default_admin_secret  ceramic_go_ss_1  ceramic_go_svc_1  ceramic_pod_status-0-0  ceramic_pod_status-0-1  ceramic_source_admin_secret  ceramic_ss_1  ceramic_ss_weighted_0  ceramic_ss_weighted_1  ceramic_ss_weighted_2  ceramic_ss_weighted_3  ceramic_ss_weighted_4  ceramic_ss_weighted_5  ceramic_ss_weighted_6  ceramic_ss_weighted_7  ceramic_ss_weighted_8  ceramic_ss_weighted_9  ceramic_svc_weighted_0  ceramic_svc_weighted_1  ceramic_svc_weighted_2  ceramic_svc_weighted_3  ceramic_svc_weighted_4  ceramic_svc_weighted_5  ceramic_svc_weighted_6  ceramic_svc_weighted_7  ceramic_svc_weighted_8  ceramic_svc_weighted_9  ceramic_weighted_peers  ceramics_weighted_status  delete_extra_ceramic_ss_1  delete_network  go_ipfs_configmap  go_ipfs_configmap_1  go_ipfs_configmap_commands  (+20 more)
operator/src/network/testdata/default_stubs/: cas_ipfs_service  cas_ipfs_stateful_set  cas_postgres_service  cas_postgres_stateful_set  cas_service  cas_stateful_set  ceramic_admin_secret  ceramic_init_configmap  ceramic_postgres_auth_secret  ceramic_service  ceramic_service_list  ceramic_stateful_set  ceramic_stateful_set_list  delete_ceramic_ss_2  delete_ceramic_ss_3  delete_ceramic_ss_4  delete_ceramic_ss_5  delete_ceramic_ss_6  delete_ceramic_ss_7  delete_ceramic_ss_8  delete_ceramic_ss_9  delete_ceramic_svc_1  delete_ceramic_svc_2  delete_ceramic_svc_3  delete_ceramic_svc_4  delete_ceramic_svc_5  delete_ceramic_svc_6  delete_ceramic_svc_7  delete_ceramic_svc_8  delete_ceramic_svc_9  ganache_service  ganache_stateful_set  keramik_peers_configmap  localstack_service  localstack_stateful_set  namespace  postgres_auth_secret  status
operator/src/network/testdata/multiple_weighted_ceramics/: ceramic_pod_status-0-2  ceramic_pod_status-0-3  ceramic_pod_status-0-4  ceramic_pod_status-0-5  ceramic_pod_status-0-6  ceramic_pod_status-0-7  ceramic_pod_status-0-8  ceramic_pod_status-0-9  ceramic_pod_status-1-0  ceramic_pod_status-1-1  ceramic_pod_status-2-0  ceramic_pod_status-3-0  ceramic_pod_status-4-0  ceramic_pod_status-5-0  ceramic_pod_status-6-0  ceramic_pod_status-7-0  ceramic_pod_status-8-0  ceramic_pod_status-9-0
operator/src/opentelemetry/: jaeger.rs  opentelemetry.rs  prometheus.rs
operator/src/simulation/: controller.rs  datadog.rs  job.rs  manager.rs  mod.rs  redis.rs  spec.rs  stub.rs  worker.rs
operator/src/simulation/testdata/: worker_job_2
operator/src/simulation/testdata/default_stubs/: goose_service  jaeger_service  jaeger_stateful_set  jaeger_status  manager_job  manager_status  monitoring_cluster_role  monitoring_cluster_role_binding  monitoring_service_account  otel_config  otel_service  otel_stateful_set  otel_status  peers_config_map  prom_config  prom_stateful_set  prom_status  redis_service  redis_stateful_set  redis_status  status  worker_job_0  worker_job_1
operator/src/simulation/testdata/reconcile_scenario/: manager_job  worker_job_0  worker_job_1
operator/src/utils/: mod.rs  stub.rs  test.rs
runner/: Cargo.toml  Dockerfile
runner/src/: bootstrap.rs  cas_push.rs  main.rs  simulate.rs  telemetry.rs  utils.rs
runner/src/load_generator/: gen.rs  mod.rs
runner/src/load_generator/utils/: ceramic_models_utils.rs  generator_utils.rs  mod.rs
runner/src/scenario/: cas_push.rs  ipfs_block_fetch.rs  mod.rs  recon_sync.rs  stability_test_utils.rs  util.rs
runner/src/scenario/ceramic/: anchor.rs  data_feed.rs  event_id_sync.rs  mod.rs  model_instance.rs  model_reuse.rs  models.rs  new_streams.rs  query.rs  recon_sync.rs  simple.rs  util.rs  write_only.rs
runner/src/scenario/ipfs/: ipfs_block_fetch.rs
scenarios/: .write-only.yaml.swp  README.md  basic.yaml  datadogAgent.yaml  delay-cas.yaml  exer_image.py  network-dev-cas.yaml  network-unresponsive-cas.yaml  network-with-cas.yaml  nodes-only.yaml  write-only-named.yaml  write-only.yaml
(+68 files in other folders)
