[workspace]
members = ["operator", "runner", "common", "expect-patch"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = "0.2"
ceramic-core = { git = "https://github.com/ceramicnetwork/rust-ceramic.git", branch = "main" }
iroh-car = { git = "https://github.com/ceramicnetwork/rust-ceramic.git", branch = "main" }
env_logger = "0.10.0"
expect-patch = { path = "./expect-patch/" }
keramik-common = { path = "./common/", default-features = false }
multiaddr = "0.17"
multibase = "0.9.1"
multihash = "0.18"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.14", features = [
    "metrics",
    "trace",
    "tokio",
] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.8" }
tracing = "0.1.37"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.1.3"

[patch.crates-io]
goose = { git = "https://github.com/3box/goose.git", branch = "feat/all-metrics-digest" }
#goose = { path = "../goose/" }
