[workspace]
members = ["operator", "runner", "common", "expect-patch"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = "0.2"
ceramic-core = { git = "https://github.com/ceramicnetwork/rust-ceramic.git", branch = "main" }
ceramic-car = { git = "https://github.com/ceramicnetwork/rust-ceramic.git", branch = "main" }
env_logger = "0.10.0"
expect-patch = { path = "./expect-patch/" }
hex = "0.4.3"
keramik-common = { path = "./common/", default-features = false }
multiaddr = "0.18"
multibase = "0.9.1"
multihash = { version = "0.19" }
multihash-codetable = { version = "0.1", features = ["sha2", "sha3"] }
# multihash-derive = { version = "0.9" }
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.14", features = [
    "metrics",
    "trace",
    "tokio",
] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.8" }
tracing = "0.1.37"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "tracing-log",
] }

[patch.crates-io]
goose = { git = "https://github.com/3box/goose.git", branch = "feat/all-metrics-digest" }
#goose = { path = "../goose/" }
