[package]
name = "keramik-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "tracing",
]

[dependencies]
anyhow.workspace = true
gethostname = "0.4.2"
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
