[package]
name = "keramik-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:tracing",
]
tokio-console = ["telemetry", "dep:console-subscriber"]

[dependencies]
anyhow.workspace = true
console-subscriber = { workspace = true, optional = true }
gethostname = "0.4.2"
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
