[package]
name = "keramik-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
telemetry = [
    "dep:hyper",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-prometheus",
    "dep:opentelemetry_sdk",
    "dep:prometheus",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
tokio-console = ["telemetry", "dep:console-subscriber"]

[dependencies]
anyhow.workspace = true
console-subscriber = { workspace = true, optional = true }
clap.workspace = true # technically optional to telemetry but required by the rest of the workspace right now
gethostname = "0.4.2"
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
opentelemetry-prometheus = { version = "0.14.1", optional = true, features = [
    "prometheus-encoding",
] }
prometheus = { version = "0.13.3", optional = true }
opentelemetry_sdk = { version = "0.21.2", optional = true, features = [
    "metrics",
    "rt-tokio",
] }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { workspace = true, optional = true }
