
[[bin]]
path = "src/crdgen.rs"
name = "crdgen"

[[bin]]
path = "src/main.rs"
name = "keramik-operator"

[package]
name = "keramik-operator"
edition = "2021"
version = "0.0.1"
description = "K8s operator binary for automating Ceramic networks"

[dependencies]
async-trait = "0.1.68"
futures = "0.3"
hex = "0.4.3"
once_cell = "1.17.1"
rand = "0.8.5"
serde_yaml = "0.9.21"
thiserror = "1"
anyhow.workspace = true
clap.workspace = true
k8s-openapi = { version = "0.18", features = [
    "v1_26",
    "schemars",
], default-features = false }
keramik-common.workspace = true
kube = { version = "0.82", features = [
    "derive",
    "runtime",
], default-features = true }
multiaddr.workspace = true
multibase.workspace = true
multihash.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
unimock = "0.4"


[dev-dependencies]
diffy = "0.3.0"
expect-test = "1.4.1"
http = "0.2.9"
hyper = "0.14.26"
tower-test = "0.4.0"
