[[bin]]
path = "src/crdgen.rs"
name = "crdgen"
required-features = ["crdgen"]

[[bin]]
path = "src/main.rs"
name = "keramik-operator"
required-features = ["controller"]


[features]
default = ["controller", "crdgen"]
crdgen = ["dep:serde_yaml"]
controller = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:clap",
    "dep:futures",
    "dep:hex",
    "dep:multiaddr",
    "dep:multibase",
    "dep:multihash",
    "dep:opentelemetry",
    "dep:reqwest",
    "dep:serde_yaml",
    "dep:thiserror",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-log",
    # Enable keramik-common/telemetry feature if the controller is enabled.
    "keramik-common/telemetry",
    "kube/client",
]


[package]
name = "keramik-operator"
edition = "2021"
version = "0.0.1"
description = "K8s operator binary for automating Ceramic networks"

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { version = "0.1.68", optional = true }
clap = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
hex = { version = "0.4.3", optional = true }
k8s-openapi = { version = "0.20", features = [
    "v1_26",
    "schemars",
], default-features = false }
keramik-common.workspace = true
kube = { version = "0.86", features = [
    "derive",
    "runtime",
    "openssl-tls",
], default-features = false }
multiaddr = { workspace = true, optional = true }
multibase = { workspace = true, optional = true }
multihash = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
rand = { version = "0.8.5" }
reqwest = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { version = "0.9.21", optional = true }
thiserror = { version = "1", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }

[dev-dependencies]
expect-patch.workspace = true
expect-test = "1"
http = "0.2.9"
hyper = "0.14.26"
mockall = "0.11.4"
tower-test = "0.4.0"
tracing-test = "0.2"
