[package]
name = "keramik-runner"
description = "Utility binary for performing various jobs to simulate Ceramic networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-core.workspace = true
iroh-car.workspace = true
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main", default-features = false }
#ceramic-http-client = { path = "../../ceramic-http-client-rs", default-features = false }
clap.workspace = true
did-method-key = "0.2"
goose = { version = "0.16", features = ["gaggle"] }
hex.workspace = true
keramik-common = { workspace = true, features = ["telemetry", "tokio-console"] }
libipld = "0.16.0"
multihash.workspace = true
opentelemetry.workspace = true
rand = "0.8.5"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
multibase.workspace = true

ed25519-dalek = "2.1"

[dev-dependencies]
test-log = "0.2"
