[package]
name = "keramik-runner"
description = "Utility binary for performing various jobs to simulate Ceramic networks"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-core.workspace = true
iroh-car.workspace = true
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main", default-features = false }
#ceramic-http-client = { path = "../../ceramic-http-client-rs", default-features = false }
clap.workspace = true
did-method-key = "0.2"
futures = "0.3"
goose = { version = "0.16", features = ["gaggle"] }
hex.workspace = true
keramik-common = { workspace = true, features = ["telemetry", "tokio-console"] }
ipld-core = "0.4"
ipld-dagpb = "0.2"
multihash.workspace = true
multihash-codetable.workspace = true
opentelemetry.workspace = true
rand = "0.8.5"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] } 
serde_ipld_dagcbor = "0.6"
serde_ipld_dagjson = "0.2"
schemars.workspace = true
serde_json.workspace = true
once_cell = "1.19.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
multibase.workspace = true
base64 = "0.21.5"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
ed25519-dalek = "2.1"

unsigned-varint = "0.8" # temporary until we can use our http client updated for new c1

[dev-dependencies]
test-log = "0.2"
